--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Intelligent Cat's Personal Site</title>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
 
@@ -10,7 +11,7 @@
 
     <table cellspacing = "20">
       <tr>
-        <td><img src="https://images-na.ssl-images-amazon.com/images/I/41dq1eneXhL._AC_.jpg" alt="very nice cat"></td>
+        <td><img height="50%" src="images/i_cat.jpg" alt="very nice cat"></td>
         <td>
           <h1>Intelligent CAT</h1>
           <p><em>Founder and <strong>CCC</strong> of Intelegent Cat Ltd.</em></p>
