--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,8 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Contacts</title>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
     <h1>My Contact details</h1>
